@@ -3,43 +3,34 @@ package com.albatross.api.v1.company.blueraven.services;
 import com.albatross.api.security.SecurityService;
 import com.albatross.api.utils.SqlCache;
 import com.albatross.api.v1.flow.enums.ProcessStepStatusType;
-import com.albatross.api.v1.flow.model.*;
+import com.albatross.api.v1.flow.model.Owner;
+import com.albatross.api.v1.flow.model.User;
+import com.albatross.api.v1.flow.model.WorkQueue;
+import com.albatross.api.v1.flow.model.WorkQueueOwner;
 import com.fasterxml.jackson.databind.ObjectMapper;
+import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
 import org.json.JSONArray;
 import org.json.JSONObject;
-import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.jdbc.core.namedparam.MapSqlParameterSource;
 import org.springframework.jdbc.core.namedparam.NamedParameterJdbcTemplate;
 import org.springframework.stereotype.Service;
 
-import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.HashMap;
 import java.util.List;
 
-
-/**
- * Created by John Berns on 2021-05-05.
- * !Describe Purpose!
- */
 @Slf4j
 @Service
+@RequiredArgsConstructor
 public class InstallerDashboardService {
 
-  @Autowired
-  SqlCache sqlCache;
+  private final SqlCache sqlCache;
+  private final SecurityService securityService;
+  private final ObjectMapper om;
+  private final NamedParameterJdbcTemplate jdbc;
 
-  @Autowired
-  SecurityService securityService;
-
-  @Autowired
-  ObjectMapper om;
-
-  @Autowired
-  NamedParameterJdbcTemplate jdbc;
-
-  public List<WorkQueueOwner> getOwners(String startDate, String endDate, String installationCrewId) {
+  public List<WorkQueueOwner> getOwners(
+      String startDate, String endDate, String installationCrewId) {
     User user = securityService.getCurrentUser();
     HashMap<String, Object> params = new HashMap<>();
     params.put("parentCompanyId", user.getHighestParentCompanyId());
@@ -49,8 +40,7 @@ public class InstallerDashboardService {
     params.put("endDate", endDate);
     params.put("installationCrewId", installationCrewId);
 
-    List<WorkQueueOwner> results = sqlCache.query("workQueue.getWorkQueueOwners", params, WorkQueueOwner.class);
-    return results;
+    return sqlCache.query("workQueue.getWorkQueueOwners", params, WorkQueueOwner.class);
   }
 
   public List<Owner> getRegionalManagers() {
@@ -61,8 +51,7 @@ public class InstallerDashboardService {
     params.put("companyId", user.getCompanyId());
     params.put("userId", user.getId());
 
-    List<Owner> results = sqlCache.query("installerDashboard.getRegionalManagers", params, Owner.class);
-    return results;
+    return sqlCache.query("installerDashboard.getRegionalManagers", params, Owner.class);
   }
 
   public List<Owner> getInstallationCrew(List<Long> regionalManagerIds) {
@@ -73,12 +62,11 @@ public class InstallerDashboardService {
     params.put("companyId", user.getCompanyId());
     params.put("orgIds", regionalManagerIds);
 
-    List<Owner> results = sqlCache.query("installerDashboard.getInstallationCrew", params, Owner.class);
-    return results;
+    return sqlCache.query("installerDashboard.getInstallationCrew", params, Owner.class);
   }
 
-
-  public String getDashboardValues(String startDate, String endDate, List<Long> installationCrewIds) {
+  public String getDashboardValues(
+      String startDate, String endDate, List<Long> installationCrewIds) {
     User user = securityService.getCurrentUser();
 
     HashMap<String, Object> params = new HashMap<>();
@@ -87,29 +75,36 @@ public class InstallerDashboardService {
     params.put("companyId", user.getCompanyId());
     params.put("crewIds", installationCrewIds);
 
-    String results = sqlCache.queryForObject("installerDashboard.getDashboardValues", params, String.class);
+    String results =
+        sqlCache.queryForObject("installerDashboard.getDashboardValues", params, String.class);
     JSONObject jsonResults = new JSONObject(results);
     JSONArray tiles = new JSONArray();
 
     JSONObject substantialCompletionsTile = new JSONObject();
     substantialCompletionsTile.put("name", "Substantial Completions");
     substantialCompletionsTile.put("value", jsonResults.getDouble("substantialCompletions"));
-    substantialCompletionsTile.put("drilldownData", jsonResults.getJSONArray("substantialCompletionsDrilldown"));
+    substantialCompletionsTile.put(
+        "drilldownData", jsonResults.getJSONArray("substantialCompletionsDrilldown"));
 
     JSONObject sameWeekCloseoutTile = new JSONObject();
     sameWeekCloseoutTile.put("name", "Same-week Closeout %");
-    sameWeekCloseoutTile.put("value", Math.round(jsonResults.getDouble("sameWeekCloseout") * 100) + "%");
-    sameWeekCloseoutTile.put("drilldownData", jsonResults.getJSONArray("sameWeekCloseoutDrilldown"));
+    sameWeekCloseoutTile.put(
+        "value", Math.round(jsonResults.getDouble("sameWeekCloseout") * 100) + "%");
+    sameWeekCloseoutTile.put(
+        "drilldownData", jsonResults.getJSONArray("sameWeekCloseoutDrilldown"));
 
     JSONObject onTimeCloseoutTile = new JSONObject();
     onTimeCloseoutTile.put("name", "On-time Closeout %");
-    onTimeCloseoutTile.put("value", Math.round(jsonResults.getDouble("onTimeCloseout") * 100) + "%");
+    onTimeCloseoutTile.put(
+        "value", Math.round(jsonResults.getDouble("onTimeCloseout") * 100) + "%");
     onTimeCloseoutTile.put("drilldownData", jsonResults.getJSONArray("onTimeCloseoutDrilldown"));
 
     JSONObject inspectionApprovalTile = new JSONObject();
     inspectionApprovalTile.put("name", "Inspection Pass Rate");
-    inspectionApprovalTile.put("value", Math.round(jsonResults.getDouble("inspectionApproval") * 100) + "%");
-    inspectionApprovalTile.put("drilldownData", jsonResults.getJSONArray("inspectionApprovalDrilldown"));
+    inspectionApprovalTile.put(
+        "value", Math.round(jsonResults.getDouble("inspectionApproval") * 100) + "%");
+    inspectionApprovalTile.put(
+        "drilldownData", jsonResults.getJSONArray("inspectionApprovalDrilldown"));
 
     tiles.put(substantialCompletionsTile);
     tiles.put(sameWeekCloseoutTile);
@@ -127,7 +122,8 @@ public class InstallerDashboardService {
     parameters.addValue("companyId", user.getCompanyId());
     parameters.addValue("startDate", startDate);
     parameters.addValue("endDate", endDate);
-    return jdbc.queryForObject(sqlCache.getByKey("installerDashboard.getPerformanceMetrics"), parameters, String.class);
+    return jdbc.queryForObject(
+        sqlCache.getByKey("installerDashboard.getPerformanceMetrics"), parameters, String.class);
   }
 
   public List<WorkQueue> getWorkQueues() {
@@ -139,11 +135,10 @@ public class InstallerDashboardService {
     params.put("companyId", user.getCompanyId());
     params.put("userPositionId", null);
     params.put("unassigned", false);
-    //currently we only show active process steps. but sending in as a list in case that changes
-    params.put("processStepStatusTypeIds", new ArrayList<>(Arrays.asList(ProcessStepStatusType.ACTIVE.id)));
+    // currently we only show active process steps. but sending in as a list in case that changes
+    params.put("processStepStatusTypeIds", List.of(ProcessStepStatusType.ACTIVE.id));
 
-    List<WorkQueue> results = sqlCache.query("workQueue.getInstallerDashboardWorkQueues", params, WorkQueue.class);
-    return results;
+    return sqlCache.query("workQueue.getInstallerDashboardWorkQueues", params, WorkQueue.class);
   }
 
   public List<WorkQueue> getWorkQueues(List<Long> installationCrewIds) {
@@ -155,11 +150,10 @@ public class InstallerDashboardService {
     params.put("companyId", user.getCompanyId());
     params.put("userPositionId", null);
     params.put("unassigned", false);
-    //currently we only show active process steps. but sending in as a list in case that changes
-    params.put("processStepStatusTypeIds", new ArrayList<>(Arrays.asList(ProcessStepStatusType.ACTIVE.id)));
+    // currently we only show active process steps. but sending in as a list in case that changes
+    params.put("processStepStatusTypeIds", List.of(ProcessStepStatusType.ACTIVE.id));
     params.put("crewIds", installationCrewIds);
 
-    List<WorkQueue> results = sqlCache.query("workQueue.getInstallerDashboardWorkQueues", params, WorkQueue.class);
-    return results;
+    return sqlCache.query("workQueue.getInstallerDashboardWorkQueues", params, WorkQueue.class);
   }
 }
